# qiskit-machine-learning

./: .buildinfo  .editorconfig  .git-blame-ignore-revs  .gitignore  .mailmap  .mergify.yml  .pylintdict  .pylintrc  .stestr.conf  03_quantum_kernel.ipynb  320_vqc_categorical_encoding.py  CITATION.bib  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  constraints.txt  genindex.html  getting_started.html  index.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  release_notes.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
_modules/: index.html
_sources/: getting_started.rst.txt  release_notes.rst.txt
apidocs/: qiskit_machine_learning.algorithms.html  qiskit_machine_learning.circuit.library.html  qiskit_machine_learning.connectors.html  qiskit_machine_learning.datasets.html  qiskit_machine_learning.gradients.html  qiskit_machine_learning.html  qiskit_machine_learning.kernels.algorithms.html  qiskit_machine_learning.kernels.html  qiskit_machine_learning.neural_networks.html  qiskit_machine_learning.optimizers.html  qiskit_machine_learning.primitives.html  qiskit_machine_learning.state_fidelities.html  qiskit_machine_learning.utils.html  qiskit_machine_learning.utils.loss_functions.html
demo/: cloud_runtime_test.py  demo_effective_dim.ipynb  demo_effective_dim.slides.html  eff_dim_metadata.json  eff_dim_runtime.ipynb  example_effective_dim.py  example_runtime.py
docs/: Makefile  conf.py  custom_directives.py  getting_started.rst  index.rst  lowercase_filter.py  versionutils.py
migration/: 01_migration_guide_0.5.html  02_migration_guide_0.8.html  index.html
qiskit_machine_learning/: __init__.py  algorithm_job.py  algorithm_result.py  deprecation.py  exceptions.py  optionals.py  variational_algorithm.py  version.py
scratchwork/: Generate Test Data.ipynb  PQK test notebook.ipynb
stubs/: qiskit_machine_learning.QiskitMachineLearningError.html  qiskit_machine_learning.algorithms.BinaryObjectiveFunction.html  qiskit_machine_learning.algorithms.MultiClassObjectiveFunction.html  qiskit_machine_learning.algorithms.NeuralNetworkClassifier.html  qiskit_machine_learning.algorithms.NeuralNetworkRegressor.html  qiskit_machine_learning.algorithms.ObjectiveFunction.html  qiskit_machine_learning.algorithms.OneHotObjectiveFunction.html  qiskit_machine_learning.algorithms.PegasosQSVC.html  qiskit_machine_learning.algorithms.QBayesian.html  qiskit_machine_learning.algorithms.QSVC.html  qiskit_machine_learning.algorithms.QSVR.html  qiskit_machine_learning.algorithms.SerializableModelMixin.html  qiskit_machine_learning.algorithms.TrainableModel.html  qiskit_machine_learning.algorithms.VQC.html  qiskit_machine_learning.algorithms.VQR.html  qiskit_machine_learning.circuit.library.QNNCircuit.html  qiskit_machine_learning.circuit.library.RawFeatureVector.html  qiskit_machine_learning.circuit.library.qnn_circuit.html  qiskit_machine_learning.circuit.library.raw_feature_vector.html  qiskit_machine_learning.connectors.TorchConnector.html  (+68 more)
(+2409 files in other folders)
